Updated output from csv file to txt files

--- a/CodeBook.html
+++ b/CodeBook.html
@@ -235,13 +235,13 @@ pre code {
 <li>Updates the variable names in dataframe by removing spurious double brackets “()”.</li>
 <li>Updates activity identifiers with descriptive text.</li>
 <li>Generates a second data frame with average of each measurement variable for each activity and each subject</li>
-<li>Writes both tidy data frames to new csv files</li>
+<li>Writes both tidy data frames to new txt files</li>
 </ul>
 </div>
 </div>
 <div id="variable-descriptions" class="section level2">
 <h2>Variable descriptions</h2>
-<p>The following are descriptions for the complete tidy data file “samsung_data.csv”:</p>
+<p>The following are descriptions for the complete tidy data file “samsung_data.txt”:</p>
 <ul>
 <li><strong>subjectNumber</strong> Identifies subject by subject identifier.</li>
 <li><strong>traintest</strong> Identifies phase origin of data, ‘test’ or ‘train’.</li>
@@ -313,7 +313,7 @@ pre code {
 <li><strong>fBodyBodyGyroJerkMagMean</strong> Average of mean value frequency domain body body gyro jerk magnitude</li>
 <li><strong>fBodyBodyGyroJerkMagStd</strong> Average of standard deviation frequency domain body body gyro jerk magnitude</li>
 </ul>
-<p>The following describes the measurement averages data file “samsung_data_average.csv”:</p>
+<p>The following describes the measurement averages data file “samsung_data_average.txt”:</p>
 <ul>
 <li><strong>Avrg_SubjectActivity</strong> List of subjects and activities for which the averages have been taken for.</li>
 </ul>
